# Fix8

./: Makefile  Makefile.in  README.md  aclocal.m4  config.status  configure  configure.ac  fix8.spec  intermediate_config.h  intermediate_config.h.in  libtool
Gemini-client/: FIX44.xml.p1  GeminiFix8  GeminiFix8.cpp  GeminiFix8.hpp  Makefile  Makefile.am  Makefile.in  config.h  config.status  gemini_classes.cpp  gemini_classes.hpp  gemini_router.hpp  gemini_traits.cpp  gemini_types.cpp  gemini_types.hpp  global_filename_not_set.log.1  global_filename_not_set.log.2  global_filename_not_set.log.3  global_filename_not_set.log.4  global_filename_not_set.log.5  libGeminiFix8.la  libGeminiFix8_la-gemini_classes.lo  libGeminiFix8_la-gemini_types.lo  libgeminiFix8.la  libtool  myfix_client.xml
Gemini-client/.deps/: GeminiFix8.Po  libGeminiFix8_la-gemini_classes.Plo  libGeminiFix8_la-gemini_traits.Plo  libgeminiFix8_la-gemini_traits.Plo  libgeminiFix8_la-gemini_types.Plo  libmyfix_la-gemini_classes.Plo  libmyfix_la-gemini_traits.Plo  libmyfix_la-gemini_types.Plo
Gemini-client/.libs/: GeminiFix8  lt-GeminiFix8
Gemini-client/run/: client.JOJOORDUAT.GEMINIORDUAT  client.JOJOORDUAT.GEMINIORDUAT.idx  myfix_client_protocol.log.JOJOORDUAT.GEMINIORDUAT  myfix_client_session.log.JOJOORDUAT.GEMINIORDUAT
Gemini-server/: GeminiFix8  GeminiFix8.cpp  GeminiFix8.hpp  Makefile  Makefile.in  a.txt  gemini_classes.cpp  gemini_classes.hpp  gemini_router.hpp  gemini_traits.cpp  gemini_types.cpp  gemini_types.hpp  global_filename_not_set.log.1  global_filename_not_set.log.2  global_filename_not_set.log.3  (+4 more)
(+148 files in other folders)
